--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,3 @@
-
-
-
 body, html {
     margin: 0;
     padding: 0;
@@ -9,9 +6,10 @@ body, html {
     color: white;
 }
 
-
-p {
-    font-style: italic;
+.nav-dibujillo {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    height: 70px;
 }
 
 .input-group-custom {
@@ -181,8 +179,9 @@ p {
     overflow: hidden;
     white-space: nowrap;
     font-size: 24px;
-    color: white;
+    color: rgb(253, 251, 251);
     animation: typing 3s steps(40, end) forwards; /* La animación se detiene al final */
+    font-size: 33px;
 }
 
 /* Animación de máquina de escribir */
@@ -499,4 +498,26 @@ p {
     to {
       transform: rotate(-1turn);
     }
+}
+
+.message-input{
+  width: 500px;
+}
+
+@media only screen and (max-width:768px){
+  .nav-dibujillo{
+    height: 85px;
   }
+
+  .message-input{
+    width: 250px;
+  }
+
+  .btn-file{
+    margin-left: 10px;
+  }
+
+  .welcome-label{
+    font-size: 20px;
+  }
+}
