--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load pwa %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,9 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
+    <link rel="stylesheet" href="{% static 'js/serviceworker.js' %}">
+    {% progressive_web_app_meta %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top" style="background-color: rgb(255, 255, 255); box-shadow: 0px 0px 10px rgb(0, 0, 0); height: 70px;">
+    <nav class="navbar navbar-expand-lg fixed-top nav-dibujillo">
         <div class="container">
             <a href="/" class="navbar-brand"><img src="{% static 'images/dibujillo.png' %}" style="width: 70px; height: 70px;" alt=""><span class="" style="color: rgb(0, 0, 0);">Dibujillo</span></a>
             <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button"><span class="navbar-toggler-icon"></span></button>
